ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
      - api.kaleyma.in
      secretName: letsencrypt-kaleym
  rules:
  - host: api.kaleyma.in
    http:
      paths:
      - path: /syllables
        pathType: Prefix
        backend:
          service:
            name: syllable-counter-service
            port:
              number: 80
  ingressClassName: nginx
